<?xml version="1.0"?>
<package>
  <name>kr210_cell_support</name>
  <version>0.0.1</version>
  <description> Collection of ROS packages for a Kuka kr210 cell with linear track present at TU Delft </description>

  <maintainer email="a.m.mendesflorindo@student.tudelft.nl">Andre Florindo</maintainer>

  <license>BSD</license>
 

  <buildtool_depend>catkin</buildtool_depend>
  
  <export>
  	<metapackage/>
  </export>
</package>
