<?xml version="1.0"?>
<package>
  <name>kr210_drivers</name>
  <version>1.0.0</version>
  <description>The kr210 pen drivers package</description>

  <maintainer email="a.m.mendesflorindo@student.tudelft.nl"> Andre Florindo </maintainer>

  <license>BSD</license>
 
  <buildtool_depend>catkin</buildtool_depend>
 
  <export>
  </export>
</package>
